--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "~11.0.9",
     "@angular/router": "~11.0.9",
     "@popperjs/core": "^2.4.4",
+    "animate.css": "^4.1.1",
     "bootstrap": "^4.5.0",
     "jest-marbles": "^2.5.1",
     "jquery": "^3.5.1",
