--- a/package.json
+++ b/package.json
@@ -21,13 +21,18 @@
     "@angular/platform-browser": "~11.0.9",
     "@angular/platform-browser-dynamic": "~11.0.9",
     "@angular/router": "~11.0.9",
+    "@ngrx/effects": "^11.0.1",
+    "@ngrx/store": "^11.0.1",
+    "@ngrx/store-devtools": "^11.0.1",
     "@popperjs/core": "^2.4.4",
+    "@sweetalert2/ngx-sweetalert2": "^9.0.0",
     "animate.css": "^4.1.1",
     "bootstrap": "^4.5.0",
     "jest-marbles": "^2.5.1",
     "jquery": "^3.5.1",
     "ngx-pagination": "^5.0.0",
     "rxjs": "~6.5.4",
+    "sweetalert2": "^10.15.6",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
@@ -38,11 +43,13 @@
     "@angular/language-service": "~11.0.9",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/jest": "^26.0.15",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
-    "@types/jest": "^26.0.15",
     "jest": "^26.6.3",
     "jest-preset-angular": "^8.3.2",
+    "karma-coverage-istanbul-reporter": "^3.0.3",
+    "karma-jasmine-html-reporter": "^1.5.4",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
