--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "ng serve ",
     "build": "ng build",
     "test": "jest",
+    "test-karma": "ng test",
     "coverage": "jest --coverage",
     "test:watch": "jest --watch",
     "lint": "ng lint",
@@ -14,10 +15,13 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~11.0.9",
+    "@angular/cdk": "^11.2.5",
     "@angular/common": "~11.0.9",
     "@angular/compiler": "~11.0.9",
     "@angular/core": "~11.0.9",
+    "@angular/flex-layout": "^11.0.0-beta.33",
     "@angular/forms": "~11.0.9",
+    "@angular/material": "^11.2.5",
     "@angular/platform-browser": "~11.0.9",
     "@angular/platform-browser-dynamic": "~11.0.9",
     "@angular/router": "~11.0.9",
@@ -26,7 +30,6 @@
     "@ngrx/store-devtools": "^11.0.1",
     "@popperjs/core": "^2.4.4",
     "@sweetalert2/ngx-sweetalert2": "^9.0.0",
-    "animate.css": "^4.1.1",
     "bootstrap": "^4.5.0",
     "jest-marbles": "^2.5.1",
     "jquery": "^3.5.1",
@@ -48,7 +51,9 @@
     "codelyzer": "^6.0.0",
     "jest": "^26.6.3",
     "jest-preset-angular": "^8.3.2",
+    "karma": "^6.2.0",
     "karma-coverage-istanbul-reporter": "^3.0.3",
+    "karma-jasmine": "^4.0.1",
     "karma-jasmine-html-reporter": "^1.5.4",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
@@ -92,7 +97,8 @@
     "globals": {
       "inditex": true,
       "ts-jest": {
-        "isolatedModules": true
+        "isolatedModules": true,
+        "diagnostics": false
       }
     }
   }
